--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@
 # tool state
 /.mcp/
 .venv/
+
+# python
+__pycache__/
+*.pyc
+
+# testing
+.pytest_cache/
+
+# generated files
+CODE_MANIFEST.md
